k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-app
spec:
  selector:
    app: workshop-app
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
